2008-05-07  Ludovic Courtès  <ludo@gnu.org>

	Guile 1.8.5 released.

	* GUILE-VERSION (LIBGUILE_INTERFACE_CURRENT): Increment due to
	the addition of an inlined version of `scm getc ()' and friends.
	(LIBGUILE_INTERFACE_AGE): Increment.
	(LIBGUILE_INTERFACE_REVISION): Zeroed.
	(LIBGUILE_SRFI_SRFI_1_INTERFACE_REVISION): Increment.

2008-05-04  Ludovic Courtès  <ludo@gnu.org>

	Add `pkg-config' support.  Suggested by Aaron VanDevender, Greg
	Troxel, and others.

	* configure.in: Substitute `sitedir', produce `guile-1.8.pc'.
	* Makefile.am (EXTRA_DIST): Add `guile-1.8.pc.in'.
	(pkgconfigdir, pkgconfig_DATA): New.

2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* configure.in (BUILD_PTHREAD_SUPPORT): New Automake
	conditional.

2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* Makefile.am (EXTRA_DIST): Remove `ANON-CVS' and `SNAPSHOTS'.

2008-03-12  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in (AC_CONFIG_FILES): Add emacs/Makefile and
	ice-9/debugging/Makefile.

	* Makefile.am (SUBDIRS): Add emacs.

2008-02-23  Neil Jerram  <neil@ossau.uklinux.net>

	* FAQ: New file.

	* Makefile.am (EXTRA_DIST): Add FAQ

2008-02-22  Ludovic Courtès  <ludo@gnu.org>

	* configure.in: Check whether `strncasecmp' is declared.

2008-02-16  Ludovic Courtès  <ludo@gnu.org>

	Guile 1.8.4 released.

	* GUILE-VERSION (LIBGUILE_INTERFACE_REVISION): Increment.
	(GUILE_MICRO_VERSION): Increment.

	* configure.in (GUILE_CFLAGS): Include `$CPPFLAGS' since they
	may include required `-I' flags (e.g., `-I/path/to/gmp'), so
	that "guile-config compile" reports all the needed flags.

2008-02-15  Neil Jerram  <neil@ossau.uklinux.net>

	* autogen.sh: Copy versions of config.guess and config.sub from
	Guile CVS to build-aux and guile-readline.

2008-02-14  Neil Jerram  <neil@ossau.uklinux.net>

	* HACKING: Note need for libtool >= 1.5.26.

	* config.rpath, build-aux/config.rpath: Updated to latest upstream
	version.

	* config.guess, config.sub: 2008-01-07 versions added to Guile