@@ -1,5 +1,9 @@
 2008-06-28  Ludovic Courtès  <ludo@gnu.org>
 
+	* Makefile.am (INCLUDES): Renamed to...
+	(AM_CPPFLAGS): this, to match current Automake conventions.
+	Users updated.
+
 	* tags.h (SCM_UNPACK): Disable type-checking for `__DECC' and
 	`__HP_cc'.  Reported by Peter O'Gorman <pogma@thewrittenword.com>.
 
